fixed delete file route
